@@ -6,16 +6,16 @@
 
 int main(int argc, char **argv)
 {
-	//	Create Csound.
-	void *csound = csoundCreate(0);
-	//	One complete performance cycle.
-	int result = csoundCompile(csound, argc, argv);
-	if(!result)
-	{
-		while(csoundPerformKsmps(csound) == 0){}
-		csoundCleanup(csound);
-	}
-	//	Destroy Csound.
-	csoundDestroy(csound);
-	return result;
+    /*	Create Csound. */
+    void *csound = csoundCreate(0);
+    /*	One complete performance cycle. */
+    int result = csoundCompile(csound, argc, argv);
+    if(!result)
+      {
+        while(csoundPerformKsmps(csound) == 0){}
+        csoundCleanup(csound);
+      }
+    /*	Destroy Csound. */
+    csoundDestroy(csound);
+    return result;
 }
